[package]
name = "poolboy"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
num = "0.4"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
hex-literal = "0.3"
structopt = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json"] }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
jsonrpc-core = "17.0.0"